hphp/hack/test/typecheck/trait_requires_final_class.php.exp
File "trait_requires_final_class.php", line 7, characters 19-19:
`C` is a `final` class, so it cannot be extended. (NastCheck[3072])
