hphp/hack/test/typecheck/trait_requires_final_class.php
<?hh // strict
// Copyright 2004-present Facebook. All Rights Reserved.

final class C {}

trait T {
  require extends C;
}
